Fix logout and dashboard buttons on mobile

--- a/src/app/admin-page-components/user-table/user-table.component.scss
+++ b/src/app/admin-page-components/user-table/user-table.component.scss
@@ -1,6 +1,10 @@
 .user-table {
     width: 80%;
     margin: auto auto;
+
+    .email-text {
+        padding-right: 0.5em;
+    }
 }
 
 ::ng-deep .center-header .mat-sort-header-container {
