--- a/src/app/admin-page/admin-page.component.scss
+++ b/src/app/admin-page/admin-page.component.scss
@@ -25,3 +25,11 @@
         }
     }
 }
+
+@media screen and (max-width: 1000px) {
+    .top-btn-container {
+        z-index: 10;
+        right: 1rem;
+        top: 1rem;
+    }
+}
